--- a/contact/index.html
+++ b/contact/index.html
@@ -93,7 +93,7 @@
     </header>
 
     <nav>
-      <a href="contact">Home</a> | <a href="">Contact Us</a>
+      <a href="contact/index.html">Home</a> | <a href="">Contact Us</a>
     </nav>
 
     <main>
