--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     </header>
 
     <nav>
-      <a href="">Home</a> | <a href="contact">Contact Us</a>
+      <a href="">Home</a> | <a href="contact/index.html">Contact Us</a>
     </nav>
 
     <main>
