A little bit of designing + logo!

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Roo</title>
+<body style="background-color:#00008B">
 
     <style>
 		@font-face {
@@ -28,16 +29,16 @@
       {
         margin:0px;
         padding:0px;
-		color:black;
+        color:white;
 		font-family: 'Museo500', 'Museo500FF', Arial;
       }
 	  
       header
       {
-        font-size:300%;
+        font-size:259%;
         font-weight:bold;
-        background-color:#00B800;
-		color:white;
+        background-color:#FFFFFF;
+		color:darkblue;
 		padding:10px;
 	  }
 	  
@@ -49,13 +50,13 @@
 
       main
       {
-        background-color: rgb(255,250,250);
+        background-color: 000000;
 	    padding:10px 10px 50px 30px;
       }
 	  
       nav
       {     
-        background-color: #4D4D4D;
+        background-color: #000000;
 		color:white;
 		padding:10px;
       }
@@ -89,23 +90,16 @@
   <body>
 
     <header>
-        <!-- Image sourced from www.rmit.edu.au for educational purposes only -->
-        <div> <img src='http://mams.rmit.edu.au/pydyrxvec44m.png' alt="rmit logo"/> Web Programming 2014 </div>
+        <div> <img src="https://31.media.tumblr.com/851a7849934011afac3a185456898b87/tumblr_n9zb9oHDiX1qegs60o1_400.jpg" alt="bloo roo logo" width="150" height="75"/> Bloo Roo Pictures </div>
     </header>
-
     <nav>
       <a href="">Home</a> | <a href="contact/index.html">Contact Us</a>
     </nav>
 
     <main>
+<h1> lol </h1>
 
-	
-	
-	<h1>TEST AREA</h1>
-	
-	
-	
-    </main>
+</main>
 
     <footer>
       &copy; <a class="return" href="/~s3492627/wp"> Nguyen Ho and Lacey Attridge 2014 </a> |
