--- a/index.html
+++ b/index.html
@@ -3,88 +3,8 @@
 
   <head>
     <meta charset="UTF-8">
-    <title>Roo</title>
-<body style="background-color:#00008B">
-
-    <style>
-		@font-face {
-		  font-family: "Museo300";
-		  src: url("http://mams.rmit.edu.au/6crm0fncu40d1.eot");
-		  src: url("http://mams.rmit.edu.au/6crm0fncu40d1.eot?#iefix") format("embedded-opentype"),
-			   url("http://mams.rmit.edu.au/x3u2oqckf06.ttf") format("truetype"),
-			   url("http://mams.rmit.edu.au/ymm4mqckf06.svg#Museo300") format("svg");
-		  font-weight: normal;
-		}
-
-		@font-face {
-		  font-family: "Museo500";
-		  src: url("http://mams.rmit.edu.au/6fpj1fncu40d1.eot");
-		  src: url("http://mams.rmit.edu.au/6fpj1fncu40d1.eot?#iefix") format("embedded-opentype"),
-			   url("http://mams.rmit.edu.au/nwhtz3g0e17.ttf") format("truetype"),
-			   url("http://mams.rmit.edu.au/9u52z3g0e17.svg#Museo500") format("svg");
-		  font-weight: normal;
-		}
-      html,
-      body
-      {
-        margin:0px;
-        padding:0px;
-        color:white;
-		font-family: 'Museo500', 'Museo500FF', Arial;
-      }
-	  
-      header
-      {
-        font-size:259%;
-        font-weight:bold;
-        background-color:#FFFFFF;
-		color:darkblue;
-		padding:10px;
-	  }
-	  
-	  header *
-	  {
-		vertical-align:middle; 
-        margin-right:40px;		
-	  }
-
-      main
-      {
-        background-color: 000000;
-	    padding:10px 10px 50px 30px;
-      }
-	  
-      nav
-      {     
-        background-color: #000000;
-		color:white;
-		padding:10px;
-      }
-
-       footer
-      {     
-        background-color:#000000;
-		color:white;
-		padding:4px;
-      }
-	  
-	  footer *
-	  {
-	    vertical-align:middle;
-	  }
-	  
-	  a
-	  {
-		color:white;
-	  }
-	  
-	    .return:link 
-	  {
-		text-decoration: none;
-		color:white;
-	  }
-	 
-    </style>
+    <title>Bloo-Roo Pictures | Home</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
   </head>
 
   <body>
@@ -93,7 +13,7 @@
         <div> <img src="https://31.media.tumblr.com/851a7849934011afac3a185456898b87/tumblr_n9zb9oHDiX1qegs60o1_400.jpg" alt="bloo roo logo" width="150" height="75"/> Bloo Roo Pictures </div>
     </header>
     <nav>
-      <a href="">Home</a> | <a href="contact/index.html">Contact Us</a>
+      <a href="index.html">Home</a> | <a href="contact.html">Contact Us</a>
     </nav>
 
     <main>
@@ -102,7 +22,7 @@
 </main>
 
     <footer>
-      &copy; <a class="return" href="/~s3492627/wp"> Nguyen Ho and Lacey Attridge 2014 </a> |
+      &copy; <a href="/~s3492627/wp"> Nguyen Ho </a> and Lacey Attridge 2014  |
       <a target="_blank" href="http://validator.w3.org/check?uri=referer"><img style="border:0;height:31px"
         src="http://www.w3.org/html/logo/downloads/HTML5_Logo_32.png" alt="HTML Validator" /></a> |
       <a target="_blank" href="http://jigsaw.w3.org/css-validator/check/referer"><img style="border:0; height:31px"
