--- a/contact.html
+++ b/contact.html
@@ -10,12 +10,15 @@
   <body>
 
     <header>
-        <div>INSERT HEADER HERE LATER</div>
+        <div> <img src="logo.jpg" alt="bloo roo logo" width="150" height="75"/> Bloo Roo Pictures </div>
     </header>
 
     <nav>
-      <a href="index.html">Home</a> | <a href="contact.html">Contact Us</a>
-    </nav>
+		<ul>
+		<li><a href="index.html">Home</a></li>
+		<li><a href="contact.html">Contact Us</a></li>
+		</ul>
+	</nav>
 
     <main>
 	
@@ -25,6 +28,9 @@
 	<br> Email Address <br> <input type="email" name="email" placeholder="example@domain.com" required /> 
 	<br> Subject <br> 
 	<select name="subject">
+	<option value="ticket-enquiry">Ticket Enquiry</option>
+	<option value="private-booking">Private Booking</option>
+	<option value="careers">Careers</option>
 	<option value="feedback">Feedback</option>
 	<option value="other">Other</option>
 	</select>
@@ -36,7 +42,7 @@
     </main>
 
     <footer>
-      &copy; <a href="/~s3492627/wp"> Nguyen Ho and Lacey Attridge 2014</a> |
+      &copy; Bloo Roo Pictures 2014 |
       <a target="_blank" href="http://validator.w3.org/check?uri=referer"><img style="border:0;height:31px"
         src="http://www.w3.org/html/logo/downloads/HTML5_Logo_32.png" alt="HTML Validator" /></a> |
       <a target="_blank" href="http://jigsaw.w3.org/css-validator/check/referer"><img style="border:0; height:31px"
