--- a/index.html
+++ b/index.html
@@ -10,19 +10,62 @@
   <body>
 
     <header>
-        <div> <img src="https://31.media.tumblr.com/851a7849934011afac3a185456898b87/tumblr_n9zb9oHDiX1qegs60o1_400.jpg" alt="bloo roo logo" width="150" height="75"/> Bloo Roo Pictures </div>
+        <div> <img src="logo.jpg" alt="bloo roo logo" width="150" height="75"/> Bloo Roo Pictures </div>
     </header>
+	
     <nav>
-      <a href="index.html">Home</a> | <a href="contact.html">Contact Us</a>
+		<ul>
+		<li><a href="index.html">Home</a></li>
+		<li><a href="contact.html">Contact Us</a></li>
+		</ul>
     </nav>
 
     <main>
-<h1> lol </h1>
+	<h1> lol </h1>
+	<h2> tbh this design is currently making me cry. it's so bad</h2>
+	test
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	test
 
-</main>
+	</main>
 
     <footer>
-      &copy; <a href="/~s3492627/wp"> Nguyen Ho </a> and Lacey Attridge 2014  |
+      &copy; Bloo Roo Pictures 2014 |
       <a target="_blank" href="http://validator.w3.org/check?uri=referer"><img style="border:0;height:31px"
         src="http://www.w3.org/html/logo/downloads/HTML5_Logo_32.png" alt="HTML Validator" /></a> |
       <a target="_blank" href="http://jigsaw.w3.org/css-validator/check/referer"><img style="border:0; height:31px"
