--- a/contact.html
+++ b/contact.html
@@ -15,8 +15,8 @@
 
     <nav>
 		<ul>
-		<li><a href="index.html">Home</a></li>
-		<li><a href="contact.html">Contact Us</a></li>
+		<li><a href="index.html">Home</a></li> |
+		<li><a class="current-page" href="contact.html">Contact Us</a></li>
 		</ul>
 	</nav>
 
