--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	
     <nav>
 		<ul>
-		<li><a href="index.html">Home</a></li>
+		<li><a class="current-page" href="index.html">Home</a></li> |
 		<li><a href="contact.html">Contact Us</a></li>
 		</ul>
     </nav>
