--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <main>
 	<h1> lol </h1>
-	<h2> tbh this design is currently making me cry. it's so bad</h2>
+	<h2> tbh this design is currently making me cry. it's so bad..hahah me too</h2>
 	test
 	<br>
 	<br>
