It still doesn't look good haha!
We're getting there though

--- a/index.html
+++ b/index.html
@@ -21,9 +21,12 @@
     </nav>
 
     <main>
-	<h1> lol </h1>
-	<h2> tbh this design is currently making me cry. it's so bad..hahah me too</h2>
-	test
+    <h1> Our quaint cinema has overgone some new renovations, combining our old world charm with the style and technologies of the modern age. </h1>
+	<h2> Cinema Maxima </h2>
+	<p> One large screen, recently renovated with 3 different types of seating. Plays mainstream movies and all 3D movies.</p>
+	<h2> Cinema Rivola</h2>
+	<p>One smaller screen, 2D only, un­renovated with conventional seating. Plays foreign language films, art house films, films near the end of their distribution. This cinema is often hired out by local businesses, the local schools and the wider local community. </p>
+	<img src="Cinema Rivola.png" alt="Cinema Rivola" width = "250" height = "200"/>
 	<br>
 	<br>
 	<br>
