Added Flex To Contact Page

--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,26 @@
     <meta charset="UTF-8">
     <title>Bloo-Roo Pictures | Contact Us</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<style>
+	.content
+	{
+	display: flex;
+	flex-flow: row wrap;
+	justify-content:center;
+	}
+	
+	#info
+	{
+	order: 1;
+	margin-right:15px;
+	}
+	
+	#contact
+	{
+	order: 2;
+	margin-left:15px;
+	}
+	</style>
   </head>
 
   <body>
@@ -21,11 +41,18 @@
 	</nav>
 
     <main>
-	
+	<div class="content">
+	<span class="info">
+	<h2>Contact Details</h2>
+	<p><b>Phone:</b> 1300-975-711<br><b>Email:</b> contact@brpictures.com <hr></p>
+	<h2>Address</h2>
+	<p>101 Pseudo Road <br>Fake Meadows <br>Melphony, 4102</p>
+	</span>
+
+	<span id="contact">
 	<h2>Contact Us</h2>
-	 
 	<form action="http://titan.csit.rmit.edu.au/~e54061/wp/form-tester.php" method="post">
-	<br> Email Address <br> <input type="email" name="email" placeholder="example@domain.com" required /> 
+	Email Address <br> <input type="email" name="email" placeholder="example@domain.com" required /> 
 	<br> Subject <br> 
 	<select name="subject">
 	<option value="ticket-enquiry">Ticket Enquiry</option>
@@ -38,7 +65,8 @@
 	<textarea name="message" required> </textarea> 
 	<br> <input type="submit" />
 	</form>
-	
+	</span>
+	</div>
     </main>
 
     <footer>
