--- a/index.html
+++ b/index.html
@@ -21,11 +21,22 @@
     </nav>
 
     <main>
-    <h1> Our quaint cinema has overgone some new renovations, combining our old world charm with the style and technologies of the modern age. </h1>
+    <p> Our quaint cinema has overgone some new renovations, combining our old world charm with the style and technologies of the modern age. We currently have two different cinema rooms, both with their own charm and seating arrangments. </p>
 	<h2> Cinema Maxima </h2>
-	<p> One large screen, recently renovated with 3 different types of seating. Plays mainstream movies and all 3D movies.</p>
+	<p>This large cinema is perfect for those into modern technology. On the large screen plays all mainstream and 3D movies. If that's not exciting enough, there are three different types of seating to choose from:
+	</p>
+	<dl>
+		<dt>Normal Seats</dt>
+		<dd>(Full, Concession and Child under 12 pricing options)</dd>
+		<dt>First Class Seats</dt>
+		<dd>(Full and Child pricing options)</dd>
+		<dt>Bean Bag Seats</dt>
+		<dd>Can accommodate 2 adults, 1 adult + 1 child OR 3 children (under 12)</dd>
+	</dl>
+	<img src="Cinema Maxima.png" alt="Cinema Maxima" width = "250" height = "200"/>
+	<br>
 	<h2> Cinema Rivola</h2>
-	<p>One smaller screen, 2D only, un­renovated with conventional seating. Plays foreign language films, art house films, films near the end of their distribution. This cinema is often hired out by local businesses, the local schools and the wider local community. </p>
+	<p>This quaint cinema features one smaller screen and un-renovated, conventional seating. Playing foreign language films, art house films and films near the end of their distribution. All of these films are shown in 2D only. This cinema is perfect to be hired for community or corporate functions. </p>
 	<img src="Cinema Rivola.png" alt="Cinema Rivola" width = "250" height = "200"/>
 	<br>
 	<br>
