Added Flex To Homepage + Fonts
Feel free to change the font, just didnt want the default RMIT one lol.

--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
   <body>
 
     <header>
-        <div> <img src="logo.jpg" alt="bloo roo logo" width="150" height="75"/> Bloo Roo Pictures </div>
+        <div> <img src="logo.jpg" alt="bloo roo logo" width="140" height="70"/> Bloo Roo Pictures </div>
     </header>
 
     <nav>
@@ -46,7 +46,7 @@
 	<h2>Contact Details</h2>
 	<p><b>Phone:</b> 1300-975-711<br><b>Email:</b> contact@brpictures.com <hr></p>
 	<h2>Address</h2>
-	<p>101 Pseudo Road <br>Fake Meadows <br>Melphony, 4102</p>
+	<p>101 Scenic Avenue <br>Cinematic Meadows <br>Moovay, 4102<hr></p>
 	</span>
 
 	<span id="contact">
@@ -70,7 +70,7 @@
     </main>
 
     <footer>
-      &copy; Bloo Roo Pictures 2014 |
+      &copy; Bloo Roo Pictures 2014 | Nguyen Ho & Lacey Attridge | 
       <a target="_blank" href="http://validator.w3.org/check?uri=referer"><img style="border:0;height:31px"
         src="http://www.w3.org/html/logo/downloads/HTML5_Logo_32.png" alt="HTML Validator" /></a> |
       <a target="_blank" href="http://jigsaw.w3.org/css-validator/check/referer"><img style="border:0; height:31px"
