--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,7 @@
 
     <main>
 	<div class="content">
-	<span class="info">
+	<span id="info">
 	<h2>Contact Details</h2>
 	<p><b>Phone:</b> 1300-975-711<br><b>Email:</b> contact@brpictures.com <hr></p>
 	<h2>Address</h2>
