--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 	</main>
 
     <footer>
-      &copy; Bloo Roo Pictures 2014 | Nguyen Ho & Lacey Attridge | 
+      &copy; Bloo Roo Pictures 2014 | Nguyen Ho s3492627 & Lacey Attridge | 
       <a target="_blank" href="http://validator.w3.org/check?uri=referer"><img style="border:0;height:31px"
         src="http://www.w3.org/html/logo/downloads/HTML5_Logo_32.png" alt="HTML Validator" /></a> |
       <a target="_blank" href="http://jigsaw.w3.org/css-validator/check/referer"><img style="border:0; height:31px"
