--- a/contact.html
+++ b/contact.html
@@ -35,21 +35,21 @@
 
     <nav>
 		<ul>
-		<li><a href="index.html">Home</a></li> |
+		<li><a href="index.html">Home</a></li> 
 		<li><a class="current-page" href="contact.html">Contact Us</a></li>
 		</ul>
 	</nav>
 
     <main>
 	<div class="content">
-	<span id="info">
+	<div id="info">
 	<h2>Contact Details</h2>
-	<p><b>Phone:</b> 1300-975-711<br><b>Email:</b> contact@brpictures.com <hr></p>
+	<p><b>Phone:</b> 1300-975-711<br><b>Email:</b> contact@brpictures.com </p><hr>
 	<h2>Address</h2>
-	<p>101 Scenic Avenue <br>Cinematic Meadows <br>Moovay, 4102<hr></p>
-	</span>
+	<p>101 Scenic Avenue <br>Cinematic Meadows <br>Moovay, 4102</p><hr>
+	</div>
 
-	<span id="contact">
+	<div id="contact">
 	<h2>Contact Us</h2>
 	<form action="http://titan.csit.rmit.edu.au/~e54061/wp/form-tester.php" method="post">
 	Email Address <br> <input type="email" name="email" placeholder="example@domain.com" required /> 
@@ -65,7 +65,7 @@
 	<textarea name="message" required> </textarea> 
 	<br> <input type="submit" />
 	</form>
-	</span>
+	</div>
 	</div>
     </main>
 
