--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 	
     <nav>
 		<ul>
-		<li><a class="current-page" href="index.html">Home</a></li> |
+		<li><a class="current-page" href="index.html">Home</a></li> 
 		<li><a href="contact.html">Contact Us</a></li>
 		</ul>
     </nav>
@@ -63,14 +63,14 @@
 		<dd>Can accommodate 2 adults, 1 adult + 1 child OR 3 children (under 12)</dd>
 	</dl>
 	<!-- Image sourced from www.rmit.edu.au for educational purposes only -->
-	<img src="Cinema Maxima.png" alt="Cinema Maxima" width = "250" height = "200"/>
+	<img src="Cinema_Maxima.png" alt="Cinema Maxima" width = "250" height = "200"/>
 	</div>
 	
 	<div id="rivola">
 	<h2> Cinema Rivola</h2>
 	<p>This quaint cinema features one smaller screen and un-renovated, conventional seating. Playing foreign language films, art house films and films near the end of their distribution. All of these films are shown in 2D only. This cinema is perfect to be hired for community or corporate functions. </p>
 	<!-- Image sourced from www.rmit.edu.au for educational purposes only -->
-	<img src="Cinema Rivola.png" alt="Cinema Rivola" width = "250" height = "200"/>
+	<img src="Cinema_Rivola.png" alt="Cinema Rivola" width = "250" height = "200"/>
 	</div>
 	</div>
 
