Proper Closing Tags + File Groupings

--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Bloo-Roo Pictures | Contact Us</title>
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<style>
 	.content
 	{
@@ -30,7 +30,7 @@
   <body>
 
     <header>
-        <div> <img src="logo.jpg" alt="bloo roo logo" width="140" height="70"/> Bloo Roo Pictures </div>
+        <div> <img src="images/logo.jpg" alt="bloo roo logo" width="140" height="70"/> Bloo Roo Pictures </div>
     </header>
 
     <nav>
@@ -44,16 +44,16 @@
 	<div class="content">
 	<div id="info">
 	<h2>Contact Details</h2>
-	<p><b>Phone:</b> 1300-975-711<br><b>Email:</b> contact@brpictures.com </p><hr>
+	<p><b>Phone:</b> 1300-975-711<br /><b>Email:</b> contact@brpictures.com </p><hr />
 	<h2>Address</h2>
-	<p>101 Scenic Avenue <br>Cinematic Meadows <br>Moovay, 4102</p><hr>
+	<p>101 Scenic Avenue <br />Cinematic Meadows <br />Moovay, 4102</p><hr />
 	</div>
 
 	<div id="contact">
 	<h2>Contact Us</h2>
 	<form action="http://titan.csit.rmit.edu.au/~e54061/wp/form-tester.php" method="post">
-	Email Address <br> <input type="email" name="email" placeholder="example@domain.com" required /> 
-	<br> Subject <br> 
+	Email Address <br /> <input type="email" name="email" placeholder="example@domain.com" required /> 
+	<br /> Subject <br /> 
 	<select name="subject">
 	<option value="ticket-enquiry">Ticket Enquiry</option>
 	<option value="private-booking">Private Booking</option>
@@ -61,16 +61,16 @@
 	<option value="feedback">Feedback</option>
 	<option value="other">Other</option>
 	</select>
-	<br> Message <br> 
+	<br /> Message <br /> 
 	<textarea name="message" required> </textarea> 
-	<br> <input type="submit" />
+	<br /> <input type="submit" />
 	</form>
 	</div>
 	</div>
     </main>
 
     <footer>
-      &copy; Bloo Roo Pictures 2014 | Nguyen Ho s3492627 & Lacey Attridge | 
+      &copy; Bloo Roo Pictures 2014 | Nguyen Ho s3492627 & Lacey Attridge s3491782 | 
       <a target="_blank" href="http://validator.w3.org/check?uri=referer"><img style="border:0;height:31px"
         src="http://www.w3.org/html/logo/downloads/HTML5_Logo_32.png" alt="HTML Validator" /></a> |
       <a target="_blank" href="http://jigsaw.w3.org/css-validator/check/referer"><img style="border:0; height:31px"
