--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Bloo-Roo Pictures | Home</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 	<style>
 	.flexbox
 	{
@@ -34,7 +34,7 @@
   <body>
 
     <header>
-        <div> <img src="logo.jpg" alt="bloo roo logo" width="140" height="70"/> Bloo Roo Pictures </div>
+        <div> <img src="images/logo.jpg" alt="bloo roo logo" width="140" height="70"/> Bloo Roo Pictures </div>
     </header>
 	
     <nav>
@@ -63,21 +63,21 @@
 		<dd>Can accommodate 2 adults, 1 adult + 1 child OR 3 children (under 12)</dd>
 	</dl>
 	<!-- Image sourced from www.rmit.edu.au for educational purposes only -->
-	<img src="Cinema_Maxima.png" alt="Cinema Maxima" width = "250" height = "200"/>
+	<img src="images/Cinema_Maxima.png" alt="Cinema Maxima" width = "250" height = "200"/>
 	</div>
 	
 	<div id="rivola">
 	<h2> Cinema Rivola</h2>
 	<p>This quaint cinema features one smaller screen and un-renovated, conventional seating. Playing foreign language films, art house films and films near the end of their distribution. All of these films are shown in 2D only. This cinema is perfect to be hired for community or corporate functions. </p>
 	<!-- Image sourced from www.rmit.edu.au for educational purposes only -->
-	<img src="Cinema_Rivola.png" alt="Cinema Rivola" width = "250" height = "200"/>
+	<img src="images/Cinema_Rivola.png" alt="Cinema Rivola" width = "250" height = "200"/>
 	</div>
 	</div>
 
 	</main>
 
     <footer>
-      &copy; Bloo Roo Pictures 2014 | Nguyen Ho s3492627 & Lacey Attridge | 
+      &copy; Bloo Roo Pictures 2014 | Nguyen Ho s3492627 & Lacey Attridge s3491782 | 
       <a target="_blank" href="http://validator.w3.org/check?uri=referer"><img style="border:0;height:31px"
         src="http://www.w3.org/html/logo/downloads/HTML5_Logo_32.png" alt="HTML Validator" /></a> |
       <a target="_blank" href="http://jigsaw.w3.org/css-validator/check/referer"><img style="border:0; height:31px"
