--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
 	
     <nav>
 		<ul>
-		<li><a class="current-page" href="index.html">Home</a></li> 
+		<li><a href="index.html">Home</a></li> 
+		<li><a href="movies.html">Movies</a></li>
+		<li><a href="tickets.php">Tickets</a></li>
 		<li><a href="contact.html">Contact Us</a></li>
 		</ul>
     </nav>
