Added padding to movies page

--- a/movies.html
+++ b/movies.html
@@ -18,6 +18,7 @@
 	order: 1;
 	flex-basis:450px;
 	flex-grow:1;
+	padding: 10px;
 	}
 	
 	#movie2
@@ -25,6 +26,7 @@
 	order: 2;
 	flex-basis:450px;
 	flex-grow:1;
+	padding: 10px;
 	}
 	
 	#movie3
@@ -32,6 +34,7 @@
 	order: 3;
 	flex-basis:450px;
 	flex-grow:1;
+	padding: 10px;
 	}
 	
 	#movie4
@@ -39,6 +42,7 @@
 	order: 4;
 	flex-basis:450px;
 	flex-grow:1;
+	padding: 10px;
 	}
 	</style>
   </head>
@@ -62,15 +66,19 @@
 	<div class="flexbox">
 	
 	<div id="movie1">
+	test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test 
 	</div>
 	
 	<div id="movie2">
+	test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test 
 	</div>
 	
 	<div id="movie3">
+	test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test 
 	</div>
 	
 	<div id="movie4">
+	test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test 
 	</div>
 	
 	</div>
