--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 		<ul>
 		<li><a href="index.html">Home</a></li> 
 		<li><a href="movies.html">Movies</a></li>
-		<li><a href="tickets.php">Tickets</a></li>
+		<li><a href="tickets.html">Tickets</a></li>
 		<li><a href="contact.html">Contact Us</a></li>
 		</ul>
     </nav>
