--- a/tickets.html
+++ b/tickets.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <title>Bloo-Roo Pictures | Home</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+	<script src="scripts/bookingValidation.js"></script>
 	<style>
 	.content
 	{
@@ -12,7 +14,7 @@
 	justify-content:center;
 	}
 	
-	#movieinfo
+	#info
 	{
 	order: 1;
 	margin-right:15px;
@@ -26,7 +28,7 @@
 	</style>
   </head>
 
-  <body>
+  <body onload="validate()">
 
     <header>
         <div> <img src="images/logo.jpg" alt="bloo roo logo" width="140" height="70"/> Bloo Roo Pictures </div>
@@ -43,75 +45,65 @@
 
     <main>
 	<div class="content">
-	<div id="movieinfo">
+	<div id="info">
 	</div>
+	
 	<div id="bookform">
 	<form action="http://titan.csit.rmit.edu.au/~e54061/wp/form-tester-2.php" method="post">
 	<h2> Book Now </h2>
 	Film <br />
-	<select name="film">
+	<select id="film" name="film" onchange="validate()" required>
 	<option value="F001">blah</option>
 	<option value="F002">blah</option>
 	<option value="F003">blah</option>
 	<option value="F004">blah</option>
 	</select>
 	<br />Cinema<br />
-	<input type="radio" name="cinema" value="maxima" checked /> Maxima
-	<input type="radio" name="cinema" value="rivola" /> Rivola
+	<input id="maxima" type="radio" name="cinema" value="maxima" onchange="validate()" required /> Maxima
+	<input id="rivola" type="radio" name="cinema" value="rivola" onchange="validate()" required /> Rivola
 	<br />Day<br />
-	<select name="day">
-	<option value="mon">Monday</option>
-	<option value="tue">Tuesday</option>
-	<option value="wed">Wednesday</option>
-	<option value="thu">Thursday</option>
-	<option value="fri">Friday</option>
-	<option value="sat">Saturday</option>
-	<option value="sun">Sunday</option>
+	<select id="day" name="day"  onchange="validate()" required>
 	</select>
 	<br />Time<br />
-	<select name="time">
-	<option value="12pm">12pm</option>
-	<option value="3pm">3pm</option>
-	<option value="4pm">4pm</option>
-	<option value="6pm">6pm</option>
-	<option value="7pm">7pm</option>
-	<option value="9pm">9pm</option>
+	<select id="time" name="time" onchange="validate()" required>
 	</select>
-	<br /><br />
+	<br />
 	
-	<table>
+	<table id="bookseating">
 	<tr><td><b>Regular Seating</b></td></tr>
 	<tr>
 	<td>Adult</td>
-	<td> <input type="number" name="adult" min="0" max="40" value="0" required></td>
+	<td> <input id="seat_adult" type="number" name="seat_adult" min="0" max="40" value="0" required></td>
 	</tr>
 	<tr>
 	<td>Concession</td>
-	<td> <input type="number" name="concession" min="0" max="40" value="0" required></td>
+	<td> <input id="seat_concession" type="number" name="seat_concession" min="0" max="40" value="0" required></td>
 	</tr>
 	<tr>
 	<td>Child</td>
-	<td> <input type="number" name="child" min="0" max="40" value="0" required></td>
+	<td> <input id="seat_child" type="number" name="seat_child" min="0" max="40" value="0" required></td>
 	</tr>
 	<tr><td><b>Beanbags</b></td></tr>
 	<tr>
 	<td>Number </td>
-	<td> <input type="number" name="beanbag" min="0" max="13" value="0" required></td>
+	<td> <input id="seat_bean" type="number" name="seat_bean" min="0" max="13" value="0" required></td>
 	</tr>
 	
 	<tr><td><b>First Class Seating</b></td></tr>
 	<tr>
 	<td>Adult</td>
-	<td> <input type="number" name="firstadult" min="0" max="12" value="0" required></td>
+	<td> <input id="seat_first_adult" type="number" name="seat_first_adult" min="0" max="12" value="0" required></td>
 	</tr>
 	<tr>
 	<td>Child</td>
-	<td> <input type="number" name="firstchild" min="0" max="12" value="0" required></td>
-	</tr>
+	<td> <input id="seat_first_child" type="number" name="seat_first_child" min="0" max="12" value="0" required></td>
+	</tr><tr>
+	<td><b>Total</b></td>
+	<td id="cost"></td></tr><br />
 	</table>
-	
-	<br /><b>Total</b><br />
-	<input type="submit" value="Book Now"/>
+	<input id="price" type="number" name="price" required hidden>
+	<button onclick="confirm()">Confirm Selection</button>
+	<input id="submit" onclick="validate()" type="submit" value="Book Now!"/>
 	</form>
 	</div>
 	</div>
