--- a/movies.html
+++ b/movies.html
@@ -3,7 +3,7 @@
 
   <head>
     <meta charset="UTF-8">
-    <title>Bloo-Roo Pictures | Home</title>
+    <title>Bloo-Roo Pictures | Movies</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
 	<style>
 	.flexbox
