--- a/tickets.html
+++ b/tickets.html
@@ -2,9 +2,8 @@
 
   <head>
     <meta charset="UTF-8">
-    <title>Bloo-Roo Pictures | Home</title>
+    <title>Bloo-Roo Pictures | Tickets</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 	<script src="scripts/bookingValidation.js"></script>
 	<style>
 	.content
