--- a/tickets.html
+++ b/tickets.html
@@ -45,6 +45,28 @@
     <main>
 	<div class="content">
 	<div id="info">
+		<table style="width:100%">
+  <tr>
+    <th>Cinema</th>
+    <th>Mon-Tue</th> 
+    <th>Wed-Fri</th>
+    <th> Sat-Sun</th>
+  </tr>
+  <tr>
+    <td>Maxima</td>
+    <td>6pm - Blended <br> 9pm - Teenage Mutant Ninja Turtles </td> 
+     <td>6pm - Blended <br> 9pm - Teenage Mutant Ninja Turtles </td> 
+      <td>3pm - The LEGO Movie <br> 6pm - Blended <br> 9pm - Teenage Mutant Ninja Turtles </td> 
+  </tr>
+  <tr>
+  	<td> Rivola </td>
+  	<td> Closed </td>
+  	 <td>12pm - The LEGO Movie <br> 7pm - The 100 Year-Old Man Who Climbed Out Of The Window And Disappeared</td> 
+  	 <td>4pm - Teenage Mutant Ninja Turtles <br> 7pm - The 100 Year-Old Man Who Climbed Out Of The Window And Disappeared </td>
+  </tr>
+</table>
+
+
 	</div>
 	
 	<div id="bookform">
